commit - MediaCard layout, prevent minor overlap bug.

--- a/src/mediacard.css
+++ b/src/mediacard.css
@@ -46,6 +46,9 @@
     color: lightgrey;
     font-size: 1.2rem;
     font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card .details .artist {
